flux/apps/bazarr/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bazarr
  namespace: bazarr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: bazarr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: bazarr
    spec:
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      securityContext:
        readOnlyRootFilesystem: true
      containers:
        - name: bazarr
          image: docker.io/linuxserver/bazarr:1.6.1
          podSecurityContext:
            fsGroup: 2000
            fsGroupChangePolicy: "Always"
          ports:
            - name: bazarr
              containerPort: 6767
              protocol: TCP

          volumeMounts:
            - mountPath: /config
              name: bazarr-config
            - mountPath: /data
              name: bazarr-media
            - mountPath: /tmp
              name: temp
          livenessProbe:
            tcpSocket:
              port: bazarr
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: bazarr
            initialDelaySeconds: 10
            timeoutSeconds: 5
          resources:
            requests:
              memory: "750M"
              cpu: "1.5"
            limits:
              memory: "750M"
              cpu: "1.5"
      volumes:
        - name: bazarr-config
          persistentVolumeClaim:
            claimName: bazarr-config
        - name: bazarr-media
          persistentVolumeClaim:
            claimName: bazarr-media-qnap
        - name: temp
          emptyDir:
            sizeLimit: 100Mi
