flux/apps/bazarr/service.yml
apiVersion: v1
kind: Service
metadata:
  name: bazarr
  namespace: bazarr
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: bazarr
  ports:
    - name: bazarr
      port: 6767
      targetPort: bazarr
      protocol: TCP
