flux/apps/bazarr/ingressroute.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: bazarr-web
  namespace: bazarr
  annotations:
    switchboard.borchero.com/ignore: "all"
    external-dns.alpha.kubernetes.io/target: traefik.tartarus.us
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`bazarr.tartarus.us`)
      kind: Rule
      services:
        - name: bazarr
          kind: Service
          port: 6767
      middlewares:
        - name: https-redirect-middleware
          namespace: bazarr

  tls:
    secretName: letsencrypt-wildcard-cert-tartarus.us-prod
